# GalaxyGeeksBot

./: .gitignore  Dockerfile  Procfile  README.md  app.json  example_config.env  pyproject.toml  update_dependencies.py
homebot/core/: bot.py  modules_manager.py
homebot/modules/ci/: upload.py
homebot/modules/ci/projects/: twrpdtgen.py
homebot/modules/ci/projects/aosp/: __init__.py  post.py
homebot/modules/ci/projects/aosp/projects/: ProjectFluid-Q.py  ProjectFluid-R.py
homebot/modules/core/: __init__.py
homebot/modules/speedtest/: __init__.py
tg_bot/: __init__.py  __main__.py  main.py
tg_bot/core/: admin.py  bot.py  error_handler.py  logging.py  modules_manager.py  permissions.py
tg_bot/modules/android/: __init__.py  magisk.py  orangefox.py  twrp.py
tg_bot/modules/authorize/: __init__.py  authorize.py
tg_bot/modules/ci/: __init__.py  artifacts.py  parser.py  upload.py
tg_bot/modules/ci/projects/: twrpdtgen.py
tg_bot/modules/ci/projects/aosp/: __init__.py  post.py  project.py  returncode.py
tg_bot/modules/ci/projects/aosp/projects/: LineageOS-Q.py  LineageOS-R.py  ProjectFluid-Q.py  ProjectFluid-R.py
tg_bot/modules/core/: __init__.py  core.py
tg_bot/modules/cowsay/: __init__.py
tg_bot/modules/error/: error.py
tg_bot/modules/exit/: __init__.py
tg_bot/modules/fun/: __init__.py  fun.py
tg_bot/modules/info/: __init__.py  info.py
tg_bot/modules/paste/: __init__.py
tg_bot/modules/ping/: __init__.py
tg_bot/modules/shell/: __init__.py
tg_bot/modules/speedtest/: __init__.py
tg_bot/modules/utilities/: __init__.py  utilities.py
tg_bot/modules/weather/: __init__.py  weather.py
